--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -160,11 +160,11 @@ $member = $getAuthUser->getAuthUser();
                 </div>
                 <div class="row">   
                
-                <aside class="col-lg-2 col-md-1 col-sm-1 col-xs-11" style="padding-top: 70px">
+                <aside class="col-lg-2 col-md-4 col-sm-6 col-xs-12" style="padding-top: 70px">
                      <?php  echo $this->render('explore/partials/filter.phtml'); ?>
                 </aside>               
                 
-                <div class="col-lg-10">
+                <div class="col-lg-10 col-md-6 col-sm-6 col-xs-12">
                         <div class="newestproducts" >
                             <div class="row">
                                 <div >
