--- a/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
+++ b/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
@@ -21,13 +21,13 @@
  **/
 ?>
 <div class="productrow"><div class="row">            
- <div class="col-lg-3">
+ <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
     <span class="num"><?=$this->rownum ?>.</span>
         <div class="text-center">
             <img class="productimg" src="<?=$this->Image($this->product['image_small'], array('width' => 90, 'height' => 90))?>" />
         </div>
  </div>
- <div class="col-lg-6">
+ <div class="col-lg-6 col-md-6 col-sm-4 col-xs-4">
         <a href="<?=$this->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?>
             <span class="version"><?=$this->product['version']?>
             </span>
@@ -43,7 +43,7 @@
             
         ?>
  </div>
- <div class="col-lg-3">
+ <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
     <div class="rating">
         <?php                
                 $this->widgetRating = new stdClass();
