--- a/application/modules/backend/views/scripts/hive/index.phtml
+++ b/application/modules/backend/views/scripts/hive/index.phtml
@@ -60,7 +60,7 @@
 	<?php 
 		$catArray = $this->categories;
 		foreach ($catArray as $cat) {
-			echo '<li>Hive-Cat-Id: '.$cat['id'].' - '.$cat['desc'].' - Ocs-Cat-Id: '.$cat['ocs_cat_id'].'</li>';
+			echo '<li>Hive-Cat-Id: '.$cat['id'].' - '.$cat['desc'].' - Ocs-Cat-Id: '.$cat['pling_cat_id'].'</li>';
 		}
 	?>
 	</ul>
