--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -264,6 +264,7 @@ $helperImage = new Default_View_Helper_Image();
                                      data-ppload-collection-id="<?= $this->ppload_collection_id ?>" data-product-id=""
                                      data-addpploadfile-uri="<?= $this->buildProductUrl('{project_id}', 'addpploadfile') ?>"
                                      data-updatepploadfile-uri="<?= $this->buildProductUrl('{project_id}', 'updatepploadfile') ?>"
+                                     data-updatefiletype-uri="<?= $this->buildProductUrl('{project_id}', 'updatefiletype') ?>"
                                      data-deletepploadfile-uri="<?= $this->buildProductUrl('{project_id}', 'deletepploadfile') ?>"
                                      data-deletepploadfiles-uri="<?= $this->buildProductUrl('{project_id}', 'deletepploadfiles') ?>"
                                      data-finalizepploadcollection-uri="<?= $this->buildProductUrl('{project_id}', 'finalizepploadcollection') ?>">
@@ -571,7 +572,12 @@ $helperImage = new Default_View_Helper_Image();
                                                             + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPL</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                                                             + '</select>'
                                                             + '</td>'
-                                                            + '<td>' + this.type + '</td>'
+                                                            //+ '<td>' + this.type + '</td>'
+                                                            + '<td>'
+                                                            + '<select id="data-select-filetype' + this.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                                                            + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
+                                                            + '</select>'
+                                                            + '</td>'
                                                             + '<td>' + this.created_timestamp + '</td>'
                                                             + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
                                                             + '<td>' + deletePploadFileBtnPerFile + '</td>'
@@ -593,6 +599,20 @@ $helperImage = new Default_View_Helper_Image();
                                                             fileTags = '';
                                                             fileTags += ',licensetype-'+$licenseId;
                                                             updatePploadFileTags($fileId, fileTags);
+                                                        });
+
+
+                                                        $filetypeSelect = $modalPpload.find('#data-select-filetype' + this.id);
+
+														if(this.active == '0') {
+															$filetypeSelect.prop('disabled', 'disabled');
+														}
+
+                                                        $filetypeSelect.on('change', function (event) {
+                                                            event.preventDefault();
+                                                            $fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
+                                                            $filetypeId = $modalPpload.find('#data-select-filetype' + $fileId).val();
+                                                            updateFileType($fileId, $filetypeId);
                                                         });
 
                                                         if ((typeof link != 'undefined') && (link != "")) {
@@ -753,7 +773,12 @@ $helperImage = new Default_View_Helper_Image();
                                                         + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPL</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                                                         + '</select>'
                                                         + '</td>'
-                                                        + '<td>' + data.file.type + '</td>'
+                                                        //+ '<td>' + this.type + '</td>'
+                                                        + '<td>'
+                                                        + '<select id="data-select-filetype' + this.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                                                        + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
+                                                        + '</select>'
+                                                        + '</td>'
                                                         + '<td>' + data.file.created_timestamp + '</td>'
                                                         + '<td style="text-align: right">' + humanFileSize(data.file.size) + '</td>'
                                                         + '<td><a href="#" class="btn btn-danger btn-xs btn-file-dropzone" data-deletepploadfile-btn=""><span class="glyphicon glyphicon-trash"></span></a></td>'
@@ -767,6 +792,13 @@ $helperImage = new Default_View_Helper_Image();
                                                         $licenseId = $modalPpload.find('#data-select-license' + $fileId).val();
                                                         fileTags += ',licensetype-'+$licenseId;
                                                         updatePploadFileTags($fileId, fileTags);
+                                                    });
+
+                                                    $filetypeSelect.on('change', function (event) {
+                                                        event.preventDefault();
+                                                        $fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
+                                                        $filetypeId = $modalPpload.find('#data-select-filetype' + $fileId).val();
+                                                        updateFileType($fileId, $filetypeId);
                                                     });
 
                                                     $modalPpload.find('button[data-file-upload-cancel-btn]').attr('disabled', 'disabled');
@@ -792,6 +824,33 @@ $helperImage = new Default_View_Helper_Image();
                                                     file_id: fileId,
                                                     file_description: fileDescription,
                                                     file_category: fileCategory
+                                                },
+                                                dataType: 'json',
+                                                success: function (data, textStatus, jqXHR) {
+                                                    if (data.status != 'ok') {
+                                                        return;
+                                                    }
+
+                                                },
+                                                error: function (jqXHR, textStatus, errorThrown) {
+                                                    alert("Error: " + textStatus + ", " + errorThrown);
+                                                    return;
+                                                }
+                                            });
+                                        }
+
+                                        function updateFileType(fileId, filetypeId) {
+                                            var $url = ($modalPpload.attr('data-updatefiletype-uri')).replace(/{project_id}/i, ProductForm.project_id);
+                                            if (typeof ProductForm.project_id == 'undefined' || ProductForm.project_id == '' || ProductForm.project_id == '0') {
+                                                $url = ($modalPpload.attr('data-updatefiletype-uri')).replace(/{project_id}/i, <?= (isset($this->project_id))?$this->project_id:0  ?>);
+                                            }
+
+                                            $.ajax({
+                                                url: $url,
+                                                type: 'POST',
+                                                data: {
+                                                    file_id: fileId,
+                                                    file_type_id: filetypeId
                                                 },
                                                 dataType: 'json',
                                                 success: function (data, textStatus, jqXHR) {
