--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -62,6 +62,13 @@
                                       </span>
                                       <span class="col-lg-7 value"> <?= $this->product_views ?></span>
                                      </div>
+
+                                     <div class="row">
+                                      <span class=" col-lg-5" > 
+                                      filetype_os
+                                      </span>
+                                      <span class="col-lg-7 value"> <?= $this->FetchProjectFileTypes($this->product->project_id) ?></span>
+                                     </div>
                                 
                                     <div class="row" style="padding-top: 5px">
                                       <div class="col-lg-12">
