register login small link replace button

--- a/application/modules/default/views/scripts/authorization/register.phtml
+++ b/application/modules/default/views/scripts/authorization/register.phtml
@@ -43,7 +43,7 @@ $helperImage = new Default_View_Helper_Image();
                         <div class="login2">
                             <a href="/login/"
                                id="show-login-form"
-                               class="btn btn-native btn-min-width">
+                               class="small">
                                 <i class="icon-white icon-lock"></i>
                                 Login
                             </a>
